src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Cancel Opportunity</fullName>
        <description>Sales process for Cancelled/ Without ABB Bid Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Bidding</fullName>
        </values>
        <values>
            <fullName>Closed Lost %28Cancelled%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost Without ABB Bid</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Opportunity Pursuit</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
<businessProcesses>
        <fullName>Close Opportunity</fullName>
        <description>Sales process for Closed Won/ Lost Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Bidding</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Lost %28Cancelled%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost Without ABB Bid</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Opportunity Pursuit</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Fast Track</fullName>
        <description>Sales process for Fast Track Opportunities</description>
        <isActive>false</isActive>
        <values>
            <fullName>Bidding</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Lost %28Cancelled%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost Without ABB Bid</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Opportunity Pursuit</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Initial</fullName>
        <description>Sales process for Initial Opportunities (Lead conversion, new Opportunities, etc.)</description>
        <isActive>true</isActive>
		<values>
            <fullName>Bidding</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Opportunity Pursuit</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Regular</fullName>
        <description>Sales process for Regular Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Bidding</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Opportunity Pursuit</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Neglected__c</fullName>
        <formula>AND(MONTH( LastActivityDate ) &lt;  MONTH(TODAY()-60), MONTH( LastActivityDate ) &gt;  MONTH(TODAY()+30), MONTH(DATEVALUE( LastModifiedDate )) &lt; MONTH(TODAY()-60), IsClosed = FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neglected</label>
        <type>Checkbox</type>
    </fields>

    <fields>
        <fullName>Opportunity_Screening_Process__c</fullName>
        <description>R4 : Opportunity Screening Process ABB SharePoint link</description>
        <formula>HYPERLINK(&quot;https://abb.sharepoint.com/sites/Global_PS_StepChange/SitePages/Step%20Change%20Initiatives.aspx?FilterID=2&quot;, &quot;Are you aware of the Opportunity Screening process?&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Screening Process</label>
        <type>Text</type>
    </fields>
	  <fields>
        <fullName>ABB_Ranking__c</fullName>
        <description>Picklist defining the internal ABB ranking values.</description>
        <label>ABB Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Bidder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	    <fields>
        <fullName>Account_Customer_LSO_Reference_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3V1 - Lookup to LSO Reference Data</description>
        <label>Account Customer LSO Reference Data</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>ERP_Reference_Data__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ERP_Reference_Data__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
 
 <fields>
        <fullName>ABB_Domain__c</fullName>
        <description>R4.1 - New picklist field created for &quot;Business line&quot;.
Picklist containing ABB Domain values</description>
        <inlineHelpText>Business lines are intended for global reporting on a lower granularity than Business Units. They are stable data elements defining a certain offering scope with a product, system and service responsibility within a certain Business Unit.</inlineHelpText>
        <label>Business Line BU</label>
        <picklist>
            <picklistValues>
                <fullName>DMDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServIS_Iterator_check__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ServIS Iterator check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Industry usage&quot;.
Picklist containing the Industry Usage level1 Values From Account</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level1</label>
        <picklist>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Quotes_Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5</description>
        <label>Closed Quotes Task Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Industry usage level 1 to replace &quot;Industry usage&quot; 
Picklist containing the Industry Usage level2 Values From Account</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level2</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level1__c</controllingField>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level3__c</fullName>
        <description>R4.1 - New dependent picklist field created for Industry usage level 2 to replace &quot;Industry usage&quot; 
Picklist containing the Industry Usage level3 Values From Account</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level3</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level2__c</controllingField>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Tender_No_Sales_Unit_1__c</fullName>
        <description>created as part of R5</description>
        <label>ABB Tender No - Sales Unit 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Tender_No_Sales_Unit_2__c</fullName>
        <description>created as part of R5</description>
        <label>ABB Tender No - Sales Unit 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
 
    <fields>
        <fullName>Account_Customer_Key_Account_Manager__c</fullName>
        <label>Account Customer Key Account Manager</label>
        <type>Email</type>
    </fields>

    <fields>
        <fullName>Account_Customer_Shortened_Name__c</fullName>
        <formula>Account.Account_Short_Name__c</formula>
        <label>Account Customer Shortened Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account</description>
        <inlineHelpText>This Account lookup is used for End User Accounts.</inlineHelpText>
        <label>Account - End User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities - End User</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Bid_Submission_Date_Comm__c</fullName>
        <description>Contains the date when the Commercial bid was submitted.</description>
        <label>Actual Bid Submission Date (Comm.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Bid_Submission_Date_Tech__c</fullName>
        <description>Contains the date when the technical bid was submitted.</description>
        <label>Actual Bid Submission Date (Tech.)</label>
        <type>Date</type>
    </fields>
	 <fields>
        <fullName>Additional_Reason_For_Close__c</fullName>
        <description>This field will be used for additional close reason, apart form the main reason (needed for reporting)</description>
        <inlineHelpText>Please chose additional reasons for closing this opportunity (optional)</inlineHelpText>
        <label>Additional Reason For Close</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>ABB only bidder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adherence to customer’s time schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bidding time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercially unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Frame Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No financing in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No or bad track record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No permits in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer after bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other preferred supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part of winning ABB package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price not competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursued by another ABB entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource availability constraint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk unacceptable</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>All_Quotes_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created as part of R5-2504</description>
        <label>All Quotes Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternative_Opportunity_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the Main Opportunity</description>
        <label>Alternative Opportunity To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Account_End_User__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_End_User__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Alternatives)</relationshipLabel>
        <relationshipName>Opportunities_Main</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>R4.1 - New dependent picklist field created for &quot;BU&quot;.
Picklist containing active Applications relating to specific Product Groups</description>
        <inlineHelpText>ABB classification of application based on the main process activity of the delivered product, service, solution. The selectable options are product group specific</inlineHelpText>
        <label>Application</label>
        <picklist>
            <controllingField>BU__c</controllingField>
            <picklistValues>
                <fullName>AP.301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.302</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.303</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.304</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.306</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.307</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.308</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.309</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.313</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.314</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.317</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.318</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.319</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.322</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.323</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.324</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.327</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.328</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.329</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.331</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
<fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
<fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Application&quot;.
Picklist containing active Applications relating to specific Product Groups</description>
        <inlineHelpText>ABB classification of application based on the main process activity of the delivered product, service, solution. The selectable options are product group specific</inlineHelpText>
        <label>Application BU</label>
        <picklist>
            <picklistValues>
                <fullName>DMDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All other BU&apos;s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bid_Valid_Until__c</fullName>
        <description>Date at which point a bid will no longer be valid.</description>
        <label>Bid Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Year__c</fullName>
        <description>Field updated when target and commit checkbox fields = true. Workflow rule populates this field with the year of the expected award date (Close Date).</description>
        <label>Budget Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
</CustomObject>